syntax = "proto3";

option go_package = "github.com/itzaddddd/game-shop";

message PlayerProfile {
  string id = 1;
  string email = 2;
  string username = 3;
  int32 roleCode = 4;
  string createdAt = 5;
  string updatedAt = 6;
}

message CredentialSearchReq {
  string email = 1;
  string password = 2;
}

message FindOnePlayerProfileToRefreshReq {
  string playerId = 1;
}

message GetPlayerSavingAccountReq {
  string playerId = 1;
}

message GetPlayerSavingAccountRes {
  string playerId = 1;
  double balance = 2;
}

message a2 {
  string a = 1;
}

service PlayerGrpcService {
  rpc CredentialSearch(CredentialSearchReq) returns (PlayerProfile);
  rpc FindOnePlayerProfileToRefresh(FindOnePlayerProfileToRefreshReq) returns (PlayerProfile);
  rpc GetPlayerSavingAccount(GetPlayerSavingAccountReq) returns (GetPlayerSavingAccountRes);
}